@startuml

    namespace org.rcdukes.objects.stoppingzone {

        class ZoneEndBoundary [[ZoneEndBoundary.html]] {
            {static} +DEFAULT_ANGLE: double
            {static} +DEFAULT_TOLERANCE: double
            +ZoneEndBoundary()
            +ZoneEndBoundary(double, double, boolean)
        }

        class StoppingZoneOrientation [[StoppingZoneOrientation.html]] {
            +StoppingZoneOrientation(StoppingZone, Lane, ViewPort)
            +determineDistanceToStoppingZone(): double
            +determineDistanceToStoppingZoneEnd(): double
        }

        class ZoneStartBoundary [[ZoneStartBoundary.html]] {
            {static} +DEFAULT_ANGLE: double
            {static} +DEFAULT_TOLERANCE: double
            +ZoneStartBoundary()
            +ZoneStartBoundary(double, double, boolean)
            +boundary(Collection<Line>): Optional<Line>
        }

        class org.rcdukes.objects.Boundary
        org.rcdukes.objects.Boundary <|-- ZoneEndBoundary

        org.rcdukes.objects.Boundary <|-- ZoneStartBoundary

    }


    center footer UMLDoclet 1.1.4, PlantUML 1.2019.05
@enduml
